# whisper-server

./: LICENSE  README.md  first.py  logger.py  main.py  pyproject.toml  requirements.txt  transcription.py
