[project]
name = "whisper-server"
version = "0.1.0"
description = "Whisper AI transcription server"
requires-python = ">=3.12"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "ASYNC",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "LOG",
    "G",
    "T20",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "PERF",
    "FURB",
    "RUF",
]

ignore = [
    "ANN101",
    "D100",
    "S101",
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true